<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="intentAction">com.redinfo.red4s.daq.RECVR</string>
    <string name="produce_ware_house_in">生产入库</string>
    <string name="return_ware_house_in">退货入库</string>
    <string name="purchase_ware_house_in">购买入库</string>
    <string name="allocate_ware_house_in">调拨入库</string>
    <string name="sales_ware_house_out">销售出库</string>
    <string name="destory_ware_house_out">销毁出库</string>
    <string name="check_ware_house_out">抽检出库</string>
    <string name="return_ware_house_out">退货出库</string>
    <string name="allocate_ware_house_out">调拨出库</string>
    <string name="app_name">RED4S出入库管理系统</string>
    <string name="loading_name">RED4S出入库</string>
    <string name="manager_system">管理系统</string>
    <string name="remember_user_info"> 记住用户信息</string>
    <string name="login">登  录</string>
    <string name="loading_now">正在载入……</string>
    <string name="title_bar_name">出入库查询</string>
    <string name="fill_order_num">填写订单号:</string>
    <string name="select_customer_info">选择客户信息:</string>
    <string name="select_customer">选择客户</string>
    <string name="next_step">下一步</string>
    <string name="code_list">条码清单</string>
    <string name="scan_code">搜索条码</string>
    <string name="order_num">单据号</string>
    <string name="create_time">创建时间</string>
    <string name="order_state">状	态</string>
    <string name="order_manager">单据管理</string>
    <string name="favor_list">收藏列表</string>
    <string name="please_waiting">请稍候……</string>
    <string name="select_next_customer">选择客户</string>
    <string name="please_enter_customer_name_or_abrr">请输入客户名称或拼音首字母</string>
    <string name="search">查询</string>
    <string name="login_now">正在登录……</string>
    <string name="product_name">产品名称</string>
    <string name="product_type">剂		型</string>
    <string name="spec">规		格</string>
    <string name="package_spec">包装规格</string>
    <string name="package_ratio">包装比例</string>
    <string name="detail_info">详细信息</string>
    <string name="product_sum">合		计</string>
    <string name="password">密码</string>
    <string name="product_statistics">产品统计</string>
    <string name="take_the_barcode">拍摄条码</string>
    <string name="finish">完成</string>
    <string name="fill_the_order_and_confirm">请先填写订单号并确认</string>
    <string name="order_different">两次填写的订单号不一样</string>
    <string name="please_complete_order">请完善单据信息</string>
    <string name="order_exist">该订单已存在</string>
    <string name="order_list">单据列表</string>
    <string name="logout_account">注销帐号</string>
    <string name="attention">注意</string>
    <string name="confirm_to_logout">确定要注销您的登录信息吗？</string>
    <string name="logout_button"> 退出登录 </string>
    <string name="select_no_customer">未选择任何客户</string>
    <string name="find_no_customer">未找到相关客户</string>
    <string name="delete_title">删除</string>
    <string name="delete_message">是否删除条码</string>
    <string name="favor_cancel">取消收藏</string>
    <string name="favor_message">取消收藏该客户</string>
    <string name="sys_setting">系统设置</string>
    <string name="ware_house_type">出入库类型</string>
    <string name="please_select_ware_house_type">请选择出入库类型</string>
    <string name="please_import_product_file">请导入产品文件</string>
    <string name="please_import_customer_file">请导入客户文件</string>
    <string name="file_not_exist">文本文件不存在</string>
    <string name="file_exception">文本编码出现异常</string>
    <string name="file_read_error">文件读取错误</string>
    <string name="please_select_func_need">请选择所需要的功能</string>
    <string name="customer_name">单位名称</string>
    <string name="customer_name_abbr">单位拼音缩写</string>
    <string name="customer_code">单位编号</string>
    <string name="favor_title">收藏</string>
    <string name="order_id">单号</string>
    <string name="customer">客户</string>
    <string name="favor_question">是否要收藏此单位：</string>
    <string name="check_file_message">请将operator.txt保存在SD卡RedInfo目录下</string>
    <string name="sd_card_not_exist">SD卡不存在</string>
    <string name="login_input_alert">您输入的密码有误，密码由0~9，和26位英文数字组成</string>
    <string name="login_failed_message">登陆失败!请确定您输入的信息正确.</string>
    <string name="code_level1">一级条码</string>
    <string name="code_level2">二级条码</string>
    <string name="code_level3">三级条码</string>
    <string name="unit">小盒</string>
    <string name="this_barcode_is_exist">此条码已存在</string>
    <string name="have_not_scan_barcode">还没有扫描条码</string>
    <string name="not_find_barcode">未找到条形码</string>
    <string name="submmit_success">提交成功</string>
    <string name="exit_the_order">退出单据</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_status">请将条码置于取景框内扫描。  </string>
    <string name="button_google_shopper">谷歌购物</string>
    <string name="preferences_actions_title">找到条码时</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条形码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_title">扫描 一维条码</string>
    <string name="preferences_decode_Data_Matrix_title">扫描 DM码</string>
    <string name="preferences_decode_QR_title">扫描 QR码</string>
    <string name="preferences_front_light_summary">前灯可用时，打开前灯</string>
    <string name="preferences_front_light_title">前灯</string>
    <string name="preferences_general_title">一般设置</string>
    <string name="preferences_name">设置</string>
    <string name="preferences_play_beep_title">提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复记录</string>
    <string name="preferences_remember_duplicates_title">记住重复</string>
    <string name="preferences_result_title">结果设置</string>
    <string name="preferences_reverse_image_summary">设备上启用了前置摄像头只</string>
    <string name="preferences_reverse_image_title">反转摄像机的图像</string>
    <string name="preferences_scanning_title">条码类型选择</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="result_text">找到纯文本</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="button_ok">确定</string>
    <string name="cancel">取消</string>
    <string name="exprot_order">生成XML文件</string>
    <string name="have_export_to_sd">已导出至SD卡</string>
    <string name="alert">警告</string>
    <string name="alert_order_message">确定要不提交单据退出吗？</string>
    <string name="confirm_to_exit">确认退出</string>
    <string name="return_to_order">返回单据</string>
    <string name="have_export_text">已完成</string>
    <string name="have_not_export_text">未完成</string>
    <string name="export_choice">单据管理</string>
    <string name="continue_scan">继续扫码</string>
    <string name="view_order">查看单据</string>
    <string name="order_title_choice">单据选项</string>
    <string name="view_xml">查看XML</string>
    <string name="edit_confirm_order_id">确认单号</string>
    <string name="edit_order_id">输入单号</string>
    <string name="operator_password">操作员密码</string>
    <string name="operator_id">操作员编号</string>
    <string name="code_not_exsit">您所查询的条码不存在</string>
    <string name="function_setting">功能设置</string>
    <string name="select_the_import_export_function">选择出入库功能</string>
    <string name="open_produce_ware_house_in">启用生产入库</string>
    <string name="open_return_ware_house_in">启用退货入库</string>
    <string name="open_purchase_ware_house_in">启用购买入库</string>
    <string name="open_allocate_ware_house_in">启用调拨入库</string>
    <string name="open_sales_ware_house_out">启用销售出库</string>
    <string name="open_destory_ware_house_out">启用销毁出库</string>
    <string name="open_check_ware_house_out">启用抽检出库</string>
    <string name="open_return_ware_house_out">启用退货出库</string>
    <string name="open_allocate_ware_house_out">启用调拨出库</string>
    <string name="check_sys_file">检查系统文件</string>
    <string name="open_this_function">请先启用此功能</string>
    <string name="on_data_in_database">数据库中不存在相关产品</string>
    <string name="sys_infomation">软件信息</string>
    <string name="judge_num_error">校验码错误</string>
    <string name="danjuhao">单据号：</string>
    <string name="tiaomazongliang">条码总量：</string>
    <string name="enter_judge_code">请输入下侧的校验码</string>
    <string name="judge_code_error">校验码输入错误</string>
    <string name="not_bcm_code">非药监码</string>
    <string name="message1">是否需要导出本单据(导出后将无法修改)</string>
    <string name="logout_message">注销帐号</string>
    <string name="exit_clean">退出将删除空单据</string>
    <string name="select_ic_customer">选择购买入库客户</string>
    <string name="oa">销售\n出库</string>
    <string name="ob">退货\n出库</string>
    <string name="od">调拨\n出库</string>
    <string name="oe">销毁\n出库</string>
    <string name="of">抽检\n出库</string>
    <string name="ia">生产\n入库</string>
    <string name="ib">退货\n入库</string>
    <string name="ic">购买\n入库</string>
    <string name="id">调拨\n入库</string>
    <string name="password_judge">密码校验</string>
    <string name="enter_judge_password">请输入校验码</string>
    <string name="re_build_xml">重新生成XML文件</string>
    <string name="re_state_setting">重新编辑单据</string>
    <string name="all">全部</string>
    <string name="delete_order">删除此单据</string>
    <string name="delete_order_message">确定要删除此单据吗？删除后该单据所有数据将无法恢复</string>
    <string name="system_info_version">(安卓版)</string>
    <string name="system_info_copyright">瑞德信息 版权所有</string>
    <string name="scan_barcode">条码扫描</string>
    <string name="bcm_abbr">监管码前缀</string>
    <string name="amount">数量</string>
    <string name="please_enter_bcm_code">请输入20位监管码</string>

</resources>