<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:background="@drawable/skin_blue"
        android:gravity="left|center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/TitleBarText"
            android:layout_gravity="center"
            android:paddingLeft="8dip"
            android:text="@string/code_list" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bar_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/mmfooter_bg_white"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/search_bar_et"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3.0dip"
                android:layout_marginTop="3.0dip"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/scan_code"
                android:singleLine="true" >
            </EditText>

            <Button
                android:id="@+id/code_search"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3.0dip"
                android:layout_marginRight="3.0dip"
                android:layout_marginTop="1.0dip"
                android:background="@drawable/voice_rcd_btn_nor"
                android:text="@string/search" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/codelv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mm_listitem_normal"
        android:divider="@drawable/reader_item_divider"
        android:listSelector="@drawable/mm_listitem_normal"
        android:scrollbars="none" >
    </ListView>

</LinearLayout>