<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f3f3f3"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:background="@drawable/skin_blue"
        android:gravity="left|center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/func_title"
            style="@style/TitleBarText"
            android:layout_gravity="center"
            android:paddingLeft="8dip"
            android:text="@string/title_bar_name" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="18.0dip"
                android:paddingLeft="18.0dip"
                android:paddingRight="18.0dip"
                android:paddingTop="26.0dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dip"
                    android:text="@string/fill_order_num"
                    android:textColor="@color/black_50_transparent" />

                <com.redinfo.daq.ui.CorpOrderEditCancel
                    android:id="@+id/CorpOrderEdit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/linearlayout_default"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip" >

                    <requestFocus />
                </com.redinfo.daq.ui.CorpOrderEditCancel>

                <LinearLayout style="@style/MMLabelSplit" />

                <LinearLayout style="@style/MMLabelSplit" />

                <com.redinfo.daq.ui.CorpOrderConfirmEditCancel
                    android:id="@+id/CorpOrderConfirmEdit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/linearlayout_default"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip" >
                </com.redinfo.daq.ui.CorpOrderConfirmEditCancel>

                <LinearLayout style="@style/MMLabelSplit" />

                <LinearLayout style="@style/MMLabelSplit" />

                <TextView
                    android:id="@+id/select_info_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dip"
                    android:paddingTop="10dip"
                    android:text="@string/select_customer_info"
                    android:textColor="@color/black_50_transparent" />

                <Button
                    android:id="@+id/SelectBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_button"
                    android:text="@string/select_customer"
                    android:textColor="@color/mm_hyper_text" />

                <LinearLayout style="@style/MMLabelSplit" />

                <LinearLayout style="@style/MMLabelSplit" />
            </LinearLayout>

            <LinearLayout style="@style/MMLabelSplit" />

            <LinearLayout style="@style/MMLabelSplit" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10.0dp"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingRight="18.0dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />

                <Button
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_one_normal"
                    android:text="@string/next_step"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>