<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:background="@drawable/skin_blue"
        android:gravity="left|center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/submmit_title"
            style="@style/TitleBarText"
            android:layout_gravity="center"
            android:paddingLeft="8dip"
            android:text="@string/title_bar_name" />

        <Button
            android:id="@+id/scan_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/title_func"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:text="@string/take_the_barcode"
            android:textColor="@color/white" >
        </Button>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingLeft="15.0dip"
            android:paddingRight="15.0dip" >

            <LinearLayout style="@style/MMLabelSplit" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/orderText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textColor="@color/black_75_transparent" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/MMLabelSplit" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/customerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/black_75_transparent" />
            </LinearLayout>

            <LinearLayout style="@style/MMLabelSplit" />

            <LinearLayout style="@style/MMLabelSplit" />

            <ListView
                android:id="@+id/code_result"
                android:layout_width="fill_parent"
                android:layout_height="240dp"
                android:background="@drawable/scanresult_frame"
                android:divider="@color/black_20_transparent"
                android:dividerHeight="1dp" >
            </ListView>

            <LinearLayout style="@style/MMLabelSplit" />

            <LinearLayout style="@style/MMLabelSplit" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/Barcode_List"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/login_button"
                    android:text="@string/code_list"
                    android:textColor="@color/mm_hyper_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/Product_Statistics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/login_button"
                    android:text="@string/product_statistics"
                    android:textColor="@color/mm_hyper_text" />
            </LinearLayout>

            <LinearLayout style="@style/MMLabelSplit" />

            <LinearLayout style="@style/MMLabelSplit" />

            <Button
                android:id="@+id/submmit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/btn_style_one_normal"
                android:text="@string/finish"
                android:textColor="@color/white" />

            <LinearLayout style="@style/MMLabelSplit" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>