<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/export_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffced2d7"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/orderIdTitle"
            android:layout_width="99.0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5.0dp"
            android:text="@string/order_num" />

        <View style="@style/vertical_layout" />

        <TextView
            android:id="@+id/orderTimeTitle"
            android:layout_width="126.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.06"
            android:gravity="center"
            android:padding="5.0dp"
            android:text="@string/create_time" />

        <View style="@style/vertical_layout" />

        <TextView
            android:id="@+id/ExportStateTitle"
            android:layout_width="67.0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5.0dip"
            android:text="@string/order_state" />
    </LinearLayout>

    <View
        android:id="@+id/horizontal_divider"
        style="@style/horizontal_layout"
        android:layout_below="@+id/export_title" />

    <LinearLayout
        android:id="@+id/export_data"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/horizontal_divider"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/orderId"
            android:layout_width="99.0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5.0dp"
            android:text="20130102001" />

        <View style="@style/vertical_layout" />

        <TextView
            android:id="@+id/orderTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.06"
            android:gravity="center"
            android:padding="5.0dp"
            android:text="TextView" />

        <View style="@style/vertical_layout" />

        <TextView
            android:id="@+id/ExportState"
            android:layout_width="67.0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5.0dip"
            android:text="TextView" >
        </TextView>
    </LinearLayout>

    <View
        style="@style/horizontal_layout"
        android:layout_below="@+id/export_data" />

</RelativeLayout>