<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:background="@drawable/skin_blue"
            android:gravity="left|center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/TitleBarText"
                android:layout_gravity="center"
                android:paddingLeft="8dip"
                android:text="@string/select_next_customer" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/panel_bg"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/editText1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3.0dip"
                android:layout_marginTop="3.0dip"
                android:layout_weight="1"
                android:background="@drawable/search_bar_edit_bg"
                android:ems="10"
                android:hint="@string/please_enter_customer_name_or_abrr" >
            </EditText>

            <Button
                android:id="@+id/button1"
                android:layout_width="50dip"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3.0dip"
                android:layout_marginRight="3.0dip"
                android:layout_marginTop="1.0dip"
                android:background="@drawable/message_send_disable"
                android:text="@string/search"
                android:textColor="@color/mm_hyper_text" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/listView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/mySideBar"
                android:scrollbars="none" />

            <com.redinfo.daq.widget.SideBar
                android:id="@+id/mySideBar"
                android:layout_width="30dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/letterTv"
        android:layout_width="70dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:background="@drawable/toast_letter_bg"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="#99FFFFFF"
        android:textSize="50sp"
        android:visibility="gone" >
    </TextView>

</FrameLayout>